refactor: make minor changes